quote section sizing done

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="wrapper">
     <!-- header start  -->
     <header
-      class="header_wrapper aspect-[1920/103] flex items-center w-full box-border bg-[#EEECE8] px-[2.083vw] border-b-[0.1rem] border-[#BEB8AE]">
+      class="header_wrapper aspect-[1840/103] flex items-center w-full box-border bg-[#EEECE8] px-[2.083vw] border-b-[0.1rem] border-[#BEB8AE]">
       <nav class="flex justify-between w-full  items-center">
         <div class="logo">
           <a href="#">
@@ -50,7 +50,8 @@
             class="bg-[#FF6D43] py-[0.938vw] px-[2.448vw] text-[#EEECE8] text-[0.729vw] rounded-full cursor-pointer flex items-center">
             <span>Make a free quote</span>
 
-            <svg class="ml-[1.042vw]" width="54" height="7" viewBox="0 0 54 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg class="ml-[1.042vw]" width="54" height="7" viewBox="0 0 54 7" fill="none"
+              xmlns="http://www.w3.org/2000/svg">
               <path d="M48.8887 2.99497V0.469971L53.3887 3.49997L48.8887 6.52997V4.00497H0.388672V2.99497H48.8887Z"
                 fill="#EEECE8" />
             </svg>
@@ -63,10 +64,10 @@
 
     <!-- here started the hero section  -->
     <section class="hero border-[#BEB8AE] bg-[#EEECE8] w-full border-b-[0.1rem]">
-      <div class="aspect-[1920/702] container-exceptional">
-        <div class="flex h-full w-full">
+      <div class="aspect-[1720/702] container-exceptional">
+        <div class="flex h-full w-full justify-between">
           <div class="w-[35%] flex justify-end items-center">
-            <div class="w-[37.6875rem] mr-6">
+            <div class="w-[37.6875rem]">
               <h1 class="text-[2.25vw] leading-[2.7vw] text-[#291E18]">
                 Where Vision Meets Precision, Every Detail Matters.
               </h1>
@@ -76,18 +77,19 @@
                 your space into a narrative of style, comfort, and innovation.
               </p>
               <a
-            class="bg-[#FF6D43] py-[0.938vw] px-[2.448vw] text-[#EEECE8] text-[0.729vw] rounded-full cursor-pointer inline-block items-center">
-            <span>Make a free quote</span>
+                class="bg-[#FF6D43] py-[0.938vw] px-[2.448vw] text-[#EEECE8] text-[0.729vw] rounded-full cursor-pointer inline-block items-center">
+                <span>Make a free quote</span>
 
-            <svg class="ml-[1.042vw] inline" width="54" height="7" viewBox="0 0 54 7" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M48.8887 2.99497V0.469971L53.3887 3.49997L48.8887 6.52997V4.00497H0.388672V2.99497H48.8887Z"
-                fill="#EEECE8" />
-            </svg>
+                <svg class="ml-[1.042vw] inline" width="54" height="7" viewBox="0 0 54 7" fill="none"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <path d="M48.8887 2.99497V0.469971L53.3887 3.49997L48.8887 6.52997V4.00497H0.388672V2.99497H48.8887Z"
+                    fill="#EEECE8" />
+                </svg>
 
-          </a>
+              </a>
             </div>
           </div>
-          <div class="h-full flex w-[65%] justify-end items-center overflow-visible">
+          <div class="h-full flex w-[63%] justify-end items-center">
             <!-- <img class="" src="/asset/img/3d floor plan 3.png" alt="" srcset="" /> -->
             <div class="hero-img w-full h-full"></div>
           </div>
@@ -388,9 +390,9 @@
     <!-- reno work section end  -->
 
     <!-- free quote section start here  -->
-    <section class="grid md:grid-cols-2 mb-20">
-      <div class="flex justify-center items-center">
-        <div class="bg-[#fff] w-3/4 flex flex-col gap-20">
+    <section class="container-exceptional flex justify-between">
+      <div class="flex items-center w-[41.667vw]">
+        <div class="bg-[#fff] flex flex-col gap-y-[2.656vw]">
           <h1 class="text-gray-900 text-5xl not-italic font-normal leading-10">
             Request Your Free Reno Quote!
           </h1>
@@ -400,19 +402,33 @@
             below, and let's start the conversation.
           </p>
           <div class="flex gap-2">
-            <a class="bg-[#FF6D43] py-4 px-10 text-[#EEECE8] rounded-full cursor-pointer stretch-btn">
-              <span>Get a free quote</span>
-              <div class="stretch-arrow ml-2 bg-white inline-block mb-[0.2rem]"></div>
-            </a>
-            <a class="border-[#BEB8AE] border py-4 px-10 rounded-full cursor-pointer stretch-btn">
+            <a
+                class="bg-[#FF6D43] py-[0.938vw] px-[2.448vw] text-[#EEECE8] text-[0.729vw] rounded-full cursor-pointer inline-block items-center">
+                <span>Make a free quote</span>
+
+                <svg class="ml-[1.042vw] inline" width="54" height="7" viewBox="0 0 54 7" fill="none"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <path d="M48.8887 2.99497V0.469971L53.3887 3.49997L48.8887 6.52997V4.00497H0.388672V2.99497H48.8887Z"
+                    fill="#EEECE8" />
+                </svg>
+
+              </a>
+              <a
+              class="border-[#0a050533] border py-[0.938vw] px-[2.448vw] text-[#291E18] text-[0.729vw] rounded-full cursor-pointer inline-block items-center ml-[2.083vw]">
               <span>Contact Us</span>
-              <div class="stretch-arrow bg-slate-950 ml-2 inline-block mb-[0.2rem]"></div>
+
+              <svg class="ml-[1.042vw] inline" width="54" height="7" viewBox="0 0 54 7" fill="none"
+                xmlns="http://www.w3.org/2000/svg">
+                <path d="M48.8887 2.99497V0.469971L53.3887 3.49997L48.8887 6.52997V4.00497H0.388672V2.99497H48.8887Z"
+                  fill="#291E18" />
+              </svg>
+
             </a>
           </div>
         </div>
       </div>
-      <div class="bg-[#C6E4EE] flex justify-center items-center pt-10">
-        <img src="./asset/img/MDL 1.png" alt="man image" />
+      <div class="bg-[#C6E4EE] w-[39.583vw] flex justify-center pt-[2.813vw]">
+        <img class="w-[26.458vw] h-[36.771vw]" src="./asset/img/MDL 1.png" alt="man image" />
       </div>
     </section>
     <!-- free quote section end here  -->
@@ -517,7 +533,7 @@
               <h3 class="text-3xl font-normal leading-9 tracking-normal text-left choose_head_text">
                 Expert Team
               </h3>
-              
+
               <p class="text-base font-normal leading-6 tracking-normal text-left w-[25rem]">
                 Our team comprises seasoned professionals with a wealth of
                 experience. From skilled craftsmen to creative designers.
