vw convert test monial

--- a/index.html
+++ b/index.html
@@ -766,78 +766,24 @@
 
       <!-- reno work section start  -->
       <section class="renoWork bg-[#EEECE8] min-h-[35rem] w-full py-12">
-        <div class="pb-52">
+        <div class="pb-52 container-general">
           <div class="mb-20">
             <h1
-              class="text-gray-900 text-center not-italic font-normal leading-10 text-[2.75rem] mb-7"
+              class="text-gray-900 text-center not-italic font-normal leading-10 text-[2.292vw] mb-7"
             >
               See how we work
             </h1>
             <p
-              class="text-gray-900 text-center text-base not-italic font-normal leading-6 w-[53rem] m-auto opacity-70 px-20"
+              class="text-gray-900 text-center text-base not-italic font-normal leading-6 w-[44.792vw] m-auto opacity-70 px-20"
             >
               Our seasoned team of professionals brings years of expertise to
               every project. From conceptualization to execution.
             </p>
           </div>
           <!-- video section start  -->
-          <div class="videoReno w-[76.0625rem] h-[35.4375rem] m-auto bg-black">
-            <img id="logo2" src="./asset/img/reno_logo_2.png" alt="logo" />
-            <div class="play">
-              <svg
-                id="ellipsImg"
-                xmlns="http://www.w3.org/2000/svg"
-                width="94"
-                height="93"
-                viewBox="0 0 94 93"
-                fill="none"
-              >
-                <g filter="url(#filter0_b_315_142)">
-                  <circle cx="47" cy="46.5" r="46.5" fill="white" />
-                </g>
-                <defs>
-                  <filter
-                    id="filter0_b_315_142"
-                    x="-5.5"
-                    y="-6"
-                    width="105"
-                    height="105"
-                    filterUnits="userSpaceOnUse"
-                    color-interpolation-filters="sRGB"
-                  >
-                    <feFlood flood-opacity="0" result="BackgroundImageFix" />
-                    <feGaussianBlur in="BackgroundImageFix" stdDeviation="3" />
-                    <feComposite
-                      in2="SourceAlpha"
-                      operator="in"
-                      result="effect1_backgroundBlur_315_142"
-                    />
-                    <feBlend
-                      mode="normal"
-                      in="SourceGraphic"
-                      in2="effect1_backgroundBlur_315_142"
-                      result="shape"
-                    />
-                  </filter>
-                </defs>
-              </svg>
-              <svg
-                id="pollyImg"
-                xmlns="http://www.w3.org/2000/svg"
-                width="16"
-                height="18"
-                viewBox="0 0 16 18"
-                fill="none"
-              >
-                <path
-                  d="M15.5 9L0.499999 17.6603L0.5 0.339745L15.5 9Z"
-                  fill="#FF6D43"
-                />
-              </svg>
-            </div>
-
+          <div class="videoReno w-[63.385vw] h-[29.531vw] m-auto">
             <video
-              poster="#000"
+              controls
               src="./asset/video/Construction_promo_video.mp4"
             ></video>
           </div>
@@ -915,99 +861,104 @@
       <!-- free quote section end here  -->
 
       <!-- testimonial section start here  -->
-      <section
-        class="bg-[#EEECE8] min-h-[35rem] w-full py-12 flex flex-row justify-center items-center gap-10"
-      >
-        <div class="leftSide">
-          <div class="flex gap-9 items-center py-20 mb-[3.19rem]">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="8"
-              height="8"
-              viewBox="0 0 8 8"
-              fill="none"
+      <section class="bg-[#EEECE8] min-h-[29.167vw] w-full py-[3vw]">
+        <div
+          class="container-exceptional flex flex-row justify-center items-center gap-10"
+        >
+          <div class="leftSide">
+            <div class="flex gap-9 items-center py-20">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="8"
+                height="8"
+                viewBox="0 0 8 8"
+                fill="none"
+              >
+                <circle cx="4" cy="4" r="4" fill="#FF6D43" />
+              </svg>
+              <h1
+                class="text-[#291E18] text-center not-italic text-[2.25vw] font-normal leading-10"
+              >
+                Testimonials
+              </h1>
+            </div>
+            <p
+              class="text-[#291E18] text-base not-italic font-normal leading-6 mb3.729vw] w-[27.5vw]"
             >
-              <circle cx="4" cy="4" r="4" fill="#FF6D43" />
-            </svg>
-            <h1
-              class="text-[#291E18] text-center not-italic text-[2.7rem] font-normal leading-10"
-            >
-              Testimonials
-            </h1>
-          </div>
-          <p
-            class="text-[#291E18] text-base not-italic font-normal leading-6 mb-[12rem] w-[33rem]"
-          >
-            Discover the stories of satisfaction and joy from our valued
-            clients. Their experiences with Renoexpert go beyond renovations.
-          </p>
+              Discover the stories of satisfaction and joy from our valued
+              clients. Their experiences with Renoexpert go beyond renovations.
+            </p>
 
-          <div class="flex gap-8">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="88"
-              height="88"
-              viewBox="0 0 88 88"
-              fill="none"
-              class="cursor-pointer"
-            >
-              <rect
+            <div class="flex gap-8">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
                 width="88"
                 height="88"
-                rx="44"
-                transform="matrix(-1 0 0 1 88 0)"
-                fill="white"
-              />
-              <path
-                d="M41.5 43.525V41L37 44.03L41.5 47.06V44.535H50V43.525H41.5Z"
-                fill="#291E18"
-              />
-            </svg>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="88"
-              height="88"
-              viewBox="0 0 88 88"
-              fill="none"
-              class="cursor-pointer"
-            >
-              <rect width="88" height="88" rx="44" fill="white" />
-              <path
-                d="M46.5 43.525V41L51 44.03L46.5 47.06V44.535H38V43.525H46.5Z"
-                fill="#291E18"
-              />
-            </svg>
-          </div>
-        </div>
-        <div class="rightSide">
-          <div
-            class="w-[47.5rem] h-[31rem] bg-white p-20 flex flex-col gap-24"
-            id="bg_right"
-          >
-            <img id="coma" src="./asset/img/appostopic_coma.png" alt="coma" />
-            <div class="flex flex-col gap-8">
-              <div class="star_icon flex gap-2">
-                <i class="fa-solid fa-star text-[#FF6D43]"></i>
-                <i class="fa-solid fa-star text-[#FF6D43]"></i>
-                <i class="fa-solid fa-star text-[#FF6D43]"></i>
-                <i class="fa-solid fa-star text-[#FF6D43]"></i>
-                <i class="fa-solid fa-star text-[#FF6D43]"></i>
-              </div>
-              <p
-                class="text-xl font-normal leading-7 tracking-normal text-left text-[#291E18]"
+                viewBox="0 0 88 88"
+                fill="none"
+                class="cursor-pointer"
               >
-                Thank you Araf and team for completing painting of my kids
-                bedroom including feature walls and master bedroom within 2
-                days. They were super efficient and responsive. Pure dedication
-                and quick response to confirm paint and design works. They were
-                willing to do.....<span class="text-[#FF6D43] cursor-pointer"
-                  >read more</span
-                >
-              </p>
+                <rect
+                  width="88"
+                  height="88"
+                  rx="44"
+                  transform="matrix(-1 0 0 1 88 0)"
+                  fill="white"
+                />
+                <path
+                  d="M41.5 43.525V41L37 44.03L41.5 47.06V44.535H50V43.525H41.5Z"
+                  fill="#291E18"
+                />
+              </svg>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="88"
+                height="88"
+                viewBox="0 0 88 88"
+                fill="none"
+                class="cursor-pointer"
+              >
+                <rect width="88" height="88" rx="44" fill="white" />
+                <path
+                  d="M46.5 43.525V41L51 44.03L46.5 47.06V44.535H38V43.525H46.5Z"
+                  fill="#291E18"
+                />
+              </svg>
             </div>
-            <div class="">
-              <img class="" src="./asset/img/reviewer_img.png" alt="person" />
-              <p class="text-[#291E18] mt-4">Avelina Ho 7 January 2023</p>
+          </div>
+          <div class="rightSide">
+            <div
+              class="w-[39.583vw] h-[25.833vw] bg-white p-20 flex flex-col gap-[2.917vw]"
+              id="bg_right"
+            >
+              <img id="coma" src="./asset/img/appostopic_coma.png" alt="coma" />
+              <div class="flex flex-col gap-8">
+                <div class="star_icon flex gap-2">
+                  <i class="fa-solid fa-star text-[#FF6D43]"></i>
+                  <i class="fa-solid fa-star text-[#FF6D43]"></i>
+                  <i class="fa-solid fa-star text-[#FF6D43]"></i>
+                  <i class="fa-solid fa-star text-[#FF6D43]"></i>
+                  <i class="fa-solid fa-star text-[#FF6D43]"></i>
+                </div>
+                <p
+                  class="text-[1.042vw] font-normal leading-7 tracking-normal text-left text-[#291E18]"
+                >
+                  Thank you Araf and team for completing painting of my kids
+                  bedroom including feature walls and master bedroom within 2
+                  days. They were super efficient and responsive. Pure
+                  dedication and quick response to confirm paint and design
+                  works. They were willing to do.....<span
+                    class="text-[#FF6D43] cursor-pointer"
+                    >read more</span
+                  >
+                </p>
+              </div>
+              <div class="">
+                <img class="" src="./asset/img/reviewer_img.png" alt="person" />
+                <p class="text-[#291E18] text-[0.677vw] mt-4">
+                  Avelina Ho 7 January 2023
+                </p>
+              </div>
             </div>
           </div>
         </div>
@@ -1279,7 +1230,7 @@
                 name="email"
                 id="email"
                 placeholder="Your E-mail *"
-                class="w-full rounded-md border border-[#e0e0e0] bg-[#FBFBFB] py-3 px-6 text-base font-medium text-[#BEB8AE] outline-none focus:border-[#FF6D43] focus:shadow-md"
+                class="w-full border border-[#e0e0e0] bg-[#FBFBFB] py-3 px-6 text-base font-medium text-[#BEB8AE] outline-none focus:border-[#FF6D43] focus:shadow-md"
               />
 
               <input
@@ -1287,7 +1238,7 @@
                 name="number"
                 id="number"
                 placeholder="Your phone number *"
-                class="w-full rounded-md border border-[#e0e0e0] bg-[#FBFBFB] py-3 px-6 text-base font-medium text-[#BEB8AE] outline-none focus:border-[#FF6D43] focus:shadow-md"
+                class="w-full border border-[#e0e0e0] bg-[#FBFBFB] py-3 px-6 text-base font-medium text-[#BEB8AE] outline-none focus:border-[#FF6D43] focus:shadow-md"
               />
             </div>
             <div class="mb-5">
@@ -1296,7 +1247,7 @@
                 name="message"
                 id="message"
                 placeholder="Conversation subject *"
-                class="w-full resize-none rounded-md border border-[#e0e0e0] bg-[#FBFBFB] py-3 px-6 text-base font-medium text-[#BEB8AE] outline-none focus:border-[#FF6D43] focus:shadow-md"
+                class="w-full resize-none border border-[#e0e0e0] bg-[#FBFBFB] py-3 px-6 text-base font-medium text-[#BEB8AE] outline-none focus:border-[#FF6D43] focus:shadow-md"
               ></textarea>
             </div>
             <div class="flex gap-2 mb-5">
