working on tesmonial vw

--- a/index.html
+++ b/index.html
@@ -765,16 +765,16 @@
       <!-- service section end -->
 
       <!-- reno work section start  -->
-      <section class="renoWork bg-[#EEECE8] min-h-[35rem] w-full py-12">
-        <div class="pb-52 container-general">
-          <div class="mb-20">
+      <section class="renoWork bg-[#EEECE8] min-h-[] w-full py-12">
+        <div class="pb-[10.833vw] container-general">
+          <div class="mb-[4.167vw]">
             <h1
-              class="text-gray-900 text-center not-italic font-normal leading-10 text-[2.292vw] mb-7"
+              class="text-gray-900 text-center not-italic font-normal leading-10 text-[2.292vw] mb-[1.458vw]"
             >
               See how we work
             </h1>
             <p
-              class="text-gray-900 text-center text-base not-italic font-normal leading-6 w-[44.792vw] m-auto opacity-70 px-20"
+              class="text-gray-900 text-center text-base not-italic font-normal lg:leading-6 md:leading-5 sm:leading-3 w-[44.792vw] m-auto opacity-70 px-20"
             >
               Our seasoned team of professionals brings years of expertise to
               every project. From conceptualization to execution.
@@ -797,12 +797,12 @@
         <div class="flex items-center w-[41.667vw]">
           <div class="bg-[#fff] flex flex-col gap-y-[2.656vw]">
             <h1
-              class="text-gray-900 text-[2.396vw] not-italic font-normal leading-10"
+              class="text-gray-900 text-[2.396vw] not-italic font-normal lg:leading-10 leading-7 sm:leading-3 md:leading-5"
             >
               Request Your Free Reno Quote!
             </h1>
             <p
-              class="text-gray-900 text-[0.938vw] not-italic font-normal leading-7"
+              class="text-gray-900 text-[0.938vw] not-italic font-normal sm:leading-4 lg:leading-7 leading-6"
             >
               Take the first step towards transforming your space by requesting
               a free, no-obligation renovation quote. Simply fill out the form
@@ -861,12 +861,12 @@
       <!-- free quote section end here  -->
 
       <!-- testimonial section start here  -->
-      <section class="bg-[#EEECE8] min-h-[29.167vw] w-full py-[3vw]">
+      <section class="bg-[#EEECE8] min-h-[29.167vw] w-full py-[10vw]">
         <div
           class="container-exceptional flex flex-row justify-center items-center gap-10"
         >
           <div class="leftSide">
-            <div class="flex gap-9 items-center py-20">
+            <div class="flex gap-9 items-center pb-[2.656vw]">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="8"
@@ -877,13 +877,13 @@
                 <circle cx="4" cy="4" r="4" fill="#FF6D43" />
               </svg>
               <h1
-                class="text-[#291E18] text-center not-italic text-[2.25vw] font-normal leading-10"
+                class="text-[#291E18] text-center not-italic text-[2.25vw] font-normal"
               >
                 Testimonials
               </h1>
             </div>
             <p
-              class="text-[#291E18] text-base not-italic font-normal leading-6 mb3.729vw] w-[27.5vw]"
+              class="text-[#291E18] text-base not-italic font-normal leading-6 lg:leading-7 md:leading-5 sm:leading-3 w-[27.5vw] pb-[9vw]"
             >
               Discover the stories of satisfaction and joy from our valued
               clients. Their experiences with Renoexpert go beyond renovations.
@@ -941,7 +941,7 @@
                   <i class="fa-solid fa-star text-[#FF6D43]"></i>
                 </div>
                 <p
-                  class="text-[1.042vw] font-normal leading-7 tracking-normal text-left text-[#291E18]"
+                  class="text-[1.042vw] font-normal leading-7 lg:leading-7 md:leading-5 sm:leading-3 tracking-normal text-left text-[#291E18]"
                 >
                   Thank you Araf and team for completing painting of my kids
                   bedroom including feature walls and master bedroom within 2
@@ -954,8 +954,12 @@
                 </p>
               </div>
               <div class="">
-                <img class="" src="./asset/img/reviewer_img.png" alt="person" />
-                <p class="text-[#291E18] text-[0.677vw] mt-4">
+                <img
+                  class="sm:w-1/2 sm:h-1/2"
+                  src="./asset/img/reviewer_img.png"
+                  alt="person"
+                />
+                <p class="text-[#291E18] text-[0.677vw] mt-[0.833vw]">
                   Avelina Ho 7 January 2023
                 </p>
               </div>
