our service section add

--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
 
       <!-- service section start  -->
       <section class="service bg-[#EEECE8] min-h-[35rem] w-full">
-        <div class="sm:w-full md:w-[95%] lg:w-[85%] mx-auto">
+        <div class="container-general mx-auto">
           <div class="flex gap-9 items-center py-20">
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -604,14 +604,14 @@
             </h1>
           </div>
 
-          <div class="services-slider">
+          <div class="services-slider grid grid-cols-2 gap-[3.229vw]">
             <!-- here started the single service section  -->
-            <div class="min-w-[30rem] h-[20rem] mx-4 flex service-item">
+            <div class="w-[36.458vw] h-[20rem] mx-4 flex service-item">
               <div class="w-3/4 h-full bg-white">
                 <div class="flex mt-[5.5rem] justify-center items-center">
                   <div class="w-4/5">
                     <h1
-                      class="text-gray-900 not-italic text-[2.6875rem] font-normal leading-[3.24rem] pb-[1.06rem]"
+                      class="text-gray-900 not-italic text-[2.24vw] font-normal leading-[3.24rem] pb-[1.06rem]"
                     >
                       Painting
                     </h1>
@@ -644,13 +644,14 @@
               </div>
             </div>
             <!-- single service section ended -->
+
             <!-- here started the single service section  -->
-            <div class="min-w-[30rem] h-[20rem] mx-4 flex service-item">
+            <div class="w-[36.458vw] h-[20rem] mx-4 flex service-item">
               <div class="w-3/4 h-full bg-white">
                 <div class="flex mt-[5.5rem] justify-center items-center">
                   <div class="w-4/5">
                     <h1
-                      class="text-gray-900 not-italic text-[2.6875rem] font-normal leading-[3.24rem] pb-[1.06rem]"
+                      class="text-gray-900 not-italic text-[2.24vw] font-normal leading-[3.24rem] pb-[1.06rem]"
                     >
                       Painting
                     </h1>
@@ -683,13 +684,14 @@
               </div>
             </div>
             <!-- single service section ended -->
+
             <!-- here started the single service section  -->
-            <div class="min-w-[30rem] h-[20rem] mx-4 flex service-item">
+            <div class="w-[36.458vw] h-[20rem] mx-4 flex service-item">
               <div class="w-3/4 h-full bg-white">
                 <div class="flex mt-[5.5rem] justify-center items-center">
                   <div class="w-4/5">
                     <h1
-                      class="text-gray-900 not-italic text-[2.6875rem] font-normal leading-[3.24rem] pb-[1.06rem]"
+                      class="text-gray-900 not-italic text-[2.24vw] font-normal leading-[3.24rem] pb-[1.06rem]"
                     >
                       Painting
                     </h1>
@@ -702,11 +704,12 @@
                       your unique style.
                     </p>
                     <a
-                      class="bg-[#FF6D43] inline-block py-4 px-5 text-[#EEECE8] rounded-full cursor-pointer mb-[5.82rem]"
-                      >Learn More
-                      <i
-                        class="fa-solid fa-arrow-right-long ml-5 position-absolute right-0 top-0"
-                      ></i>
+                      class="bg-[#FF6D43] py-4 px-10 text-[#EEECE8] rounded-full cursor-pointer stretch-btn"
+                    >
+                      <span>Learn More</span>
+                      <div
+                        class="stretch-arrow ml-2 bg-white inline-block mb-[0.2rem]"
+                      ></div>
                     </a>
                   </div>
                 </div>
@@ -721,13 +724,14 @@
               </div>
             </div>
             <!-- single service section ended -->
+
             <!-- here started the single service section  -->
-            <div class="min-w-[30rem] h-[20rem] mx-4 flex service-item">
+            <div class="w-[36.458vw] h-[20rem] mx-4 flex service-item">
               <div class="w-3/4 h-full bg-white">
                 <div class="flex mt-[5.5rem] justify-center items-center">
                   <div class="w-4/5">
                     <h1
-                      class="text-gray-900 not-italic text-[2.6875rem] font-normal leading-[3.24rem] pb-[1.06rem]"
+                      class="text-gray-900 not-italic text-[2.24vw] font-normal leading-[3.24rem] pb-[1.06rem]"
                     >
                       Painting
                     </h1>
@@ -740,11 +744,52 @@
                       your unique style.
                     </p>
                     <a
-                      class="bg-[#FF6D43] inline-block py-4 px-5 text-[#EEECE8] rounded-full cursor-pointer mb-[5.82rem]"
-                      >Learn More
-                      <i
-                        class="fa-solid fa-arrow-right-long ml-5 position-absolute right-0 top-0"
-                      ></i>
+                      class="bg-[#FF6D43] py-4 px-10 text-[#EEECE8] rounded-full cursor-pointer stretch-btn"
+                    >
+                      <span>Learn More</span>
+                      <div
+                        class="stretch-arrow ml-2 bg-white inline-block mb-[0.2rem]"
+                      ></div>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="w-1/4 h-full">
+                <img
+                  src="asset/img/service_paint.png"
+                  class="h-full"
+                  alt=""
+                  srcset=""
+                />
+              </div>
+            </div>
+            <!-- single service section ended -->
+
+            <!-- here started the single service section  -->
+            <div class="w-[36.458vw] h-[20rem] mx-4 flex service-item">
+              <div class="w-3/4 h-full bg-white">
+                <div class="flex mt-[5.5rem] justify-center items-center">
+                  <div class="w-4/5">
+                    <h1
+                      class="text-gray-900 not-italic text-[2.24vw] font-normal leading-[3.24rem] pb-[1.06rem]"
+                    >
+                      Painting
+                    </h1>
+                    <p
+                      class="text-gray-900 text-base not-italic font-normal opacity-[0.7] pb-[7.03rem]"
+                    >
+                      From helping you choose the perfect color palette to
+                      executing precise brushwork, we bring life and vibrancy to
+                      your home's walls, creating an atmosphere that reflects
+                      your unique style.
+                    </p>
+                    <a
+                      class="bg-[#FF6D43] py-4 px-10 text-[#EEECE8] rounded-full cursor-pointer stretch-btn"
+                    >
+                      <span>Learn More</span>
+                      <div
+                        class="stretch-arrow ml-2 bg-white inline-block mb-[0.2rem]"
+                      ></div>
                     </a>
                   </div>
                 </div>
@@ -953,9 +998,9 @@
                   >
                 </p>
               </div>
-              <div class="">
+              <div class="flex gap-4 justify-start items-center">
                 <img
-                  class="sm:w-1/2 sm:h-1/2"
+                  class="sm:w-[2rem] sm:h-[2rem] md:w-[3rem] md:h-[3rem] lg:w-[5rem] lg:h-[5rem]"
                   src="./asset/img/reviewer_img.png"
                   alt="person"
                 />
@@ -970,15 +1015,17 @@
       <!-- testimonial section end here  -->
 
       <!-- renovate your home start  -->
-      <section class="bg-black p-6 h-[35rem] flex justify-center items-center">
+      <section
+        class="bg-black p-6 min-h-[29.167vw] flex justify-center items-center"
+      >
         <div class="flex flex-col gap-3 justify-center items-center m-4">
           <h1
-            class="text-white text-6xl font-normal tracking-normal text-left leading-[77px]"
+            class="text-white lg:text-6xl font-normal lg:tracking-normal text-left lg:leading-[77px] md:leading-10 sm:leading-7"
           >
             Ready to renovate your home?
           </h1>
           <p
-            class="text-white text-lg font-normal leading-5 tracking-normal text-center"
+            class="text-white lg:text-lg font-normal leading-5 tracking-normal text-center"
           >
             Drop us a line to discuss how Renoexpert can help you to organize
             your dream Home.
