our services section fix

--- a/index.html
+++ b/index.html
@@ -849,7 +849,7 @@
                 <div class="flex mt-[4.142vw] justify-center items-center">
                   <div class="w-4/5">
                     <h1
-                      class="text-gray-900 lg:[2.24vw] md:[2.24vw] sm:[4.651vw] lg:mb-[0.781vw] md:mb-[0.781vw] sm:mb-[5.116vw]"
+                      class="text-gray-900 lg:text-[2.24vw] md:text-[2.24vw] sm:text-[4.651vw] lg:mb-[0.781vw] md:mb-[0.781vw] sm:mb-[5.116vw]"
                     >
                       Painting
                     </h1>
@@ -899,7 +899,7 @@
                 <div class="flex mt-[4.142vw] justify-center items-center">
                   <div class="w-4/5">
                     <h1
-                      class="text-gray-900 lg:[2.24vw] md:[2.24vw] sm:[4.651vw] lg:mb-[0.781vw] md:mb-[0.781vw] sm:mb-[5.116vw]"
+                      class="text-gray-900 lg:text-[2.24vw] md:text-[2.24vw] sm:text-[4.651vw] lg:mb-[0.781vw] md:mb-[0.781vw] sm:mb-[5.116vw]"
                     >
                       Demolition
                     </h1>
@@ -948,7 +948,7 @@
                 <div class="flex mt-[4.142vw] justify-center items-center">
                   <div class="w-4/5">
                     <h1
-                      class="text-gray-900 lg:[2.24vw] md:[2.24vw] sm:[4.651vw] lg:mb-[0.781vw] md:mb-[0.781vw] sm:mb-[5.116vw]"
+                      class="text-gray-900 lg:text-[2.24vw] md:text-[2.24vw] sm:text-[4.651vw] lg:mb-[0.781vw] md:mb-[0.781vw] sm:mb-[5.116vw]"
                     >
                       Masonry
                     </h1>
@@ -997,7 +997,7 @@
                 <div class="flex mt-[4.142vw] justify-center items-center">
                   <div class="w-4/5">
                     <h1
-                      class="text-gray-900 lg:[2.24vw] md:[2.24vw] sm:[4.651vw] lg:mb-[0.781vw] md:mb-[0.781vw] sm:mb-[5.116vw]"
+                      class="text-gray-900 lg:text-[2.24vw] md:text-[2.24vw] sm:text-[4.651vw] lg:mb-[0.781vw] md:mb-[0.781vw] sm:mb-[5.116vw]"
                     >
                       Flooring
                     </h1>
@@ -1046,7 +1046,7 @@
                 <div class="flex mt-[4.142vw] justify-center items-center">
                   <div class="w-4/5">
                     <h1
-                      class="text-gray-900 lg:[2.24vw] md:[2.24vw] sm:[4.651vw] lg:mb-[0.781vw] md:mb-[0.781vw] sm:mb-[5.116vw]"
+                      class="text-gray-900 lg:text-[2.24vw] md:text-[2.24vw] sm:text-[4.651vw] lg:mb-[0.781vw] md:mb-[0.781vw] sm:mb-[5.116vw]"
                     >
                       Wall Partition & Ceiling
                     </h1>
@@ -1095,7 +1095,7 @@
                 <div class="flex mt-[4.142vw] justify-center items-center">
                   <div class="w-4/5">
                     <h1
-                      class="text-gray-900 lg:[2.24vw] md:[2.24vw] sm:[4.651vw] lg:mb-[0.781vw] md:mb-[0.781vw] sm:mb-[5.116vw]"
+                      class="text-gray-900 lg:text-[2.24vw] md:text-[2.24vw] sm:text-[4.651vw] lg:mb-[0.781vw] md:mb-[0.781vw] sm:mb-[5.116vw]"
                     >
                       Electrical and Plumbing
                     </h1>
